# OpenHosta

./: .flake8  .gitignore  .models.yaml.example  CHAGELOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  LICENSE  Makefile  README.md  RELEASE_NOTE.md  RELEASE_NOTES.md  TODO.md  archi.py  debug_resolver.py  debug_type_resolver.py  docker-compose.yml  emulator.py  enhancer.py  litellm_config.yaml.example  mkdocs.yml  mood_data.json  openhosta.ipynb  pyproject.toml  reproduce_issubclass.py  reproduce_issue.py  requirements.txt  setup.py  synthetic_data_generator.py  test.py  test_debug_conversion.py  test_debug_dataclass.py  test_diagnostic.py  test_enum_formats.py  test_guarded_basic.py  test_guarded_dataclass.py  test_guarded_dataclass_simple.py  test_pyd.py  tic_tac_toe_dataset.csv
.agents/rules/: use-venv.md
.github/workflows/: deploy.yml  docs.yml  format.yml  quality_check.yml  release.yml  test.yml
DEPRECATED/: OpenHosta.py
DEPRECATED/predict/: model.py
DEPRECATED/utils/: analytics.py
Documentation/: Docs.md  demo.ipynb  example.ipynb
OpenHosta/: .gitignore  README.md  setup.py
OpenHosta/src/: OpenHosta.py  enhancer.py  test.py
backend/: Dockerfile  app.py  docker-compose.yml  game.py  llm.py  requirements.txt
backend/core/: OpenHosta.py
core/: OpenHosta.py  Test_oracle.ipynb  docs.md  game.py  hand-e-llm.py  test.ipynb
demo/: demo_email_validator.py  demo_future_date.py  demo_guardrails.py  demo_list_validator.py  demo_llm_judge.py  demo_percentage.py  demo_positive_number.py  demo_url_validator.py  demo_valid_code.py  demo_validator.py  demo_word_limit.py
doc/: Docs.md  debug_return_type.ipynb  requirements.txt
docs/: PMAC.md  SmokeTest_ollama.ipynb  TODO.md  V4_CHANGELOG.md  callables.md  compat_matrix_types.md  compatibility_table.md  core_functions.md  debugging.md  doc.md  doc_emulate.md  emulate_pipeline.md  getting_started.md  guarded.md  index.md  installation.md  models_and_setup.md  openhosta_QwQ32.ipynb  openhosta_agent.ipynb  openhosta_mistral_small.ipynb  openhosta_phi4.ipynb  openhosta_phi4_mini.ipynb  openhosta_qwen25_coder_local.ipynb  parallel_processing.md  pipeline.md  pipeline_steps.md  production.md  safe_context_and_uncertainty.md  semantics.md  streaming.md  types_and_pydantic.md
docs/compatibility/: v3.0.md  v4.0.md
docs/examples/: data_extraction.md  ocr_local_ollama.md  parallel_processing.md  text_classification.md
examples/: .env
examples/backend/: README.md
examples/core/: docs.md  test.ipynb  visual.json
examples/frontend/: .gitignore  vite.config.js
frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
next/: Agent.ipynb  ImgPipeline.py  MetaPromptTuning.py  README.md  adaptive_semantic_collections.md  agents.py  anytypes_probs.py  big_table_of_models.py  classifier.py  enum_probs.py  generator_based_on_uncertainty.py  guards_as_an_object.py  image_gen.py  imagegen.py  images.py  liste_idees_a_selectionner.md  meta_prompt_improvements.md  ocr_model.py  predict_idea.py  pydantic_huge_structures.py  semantic_set_and_dict.py  semantics.md  semset.py  structured_thinking.py
nginx/: default.conf
refacto/: checker.py  config.py  core.py  injector.py  inspector.py  memory.py
refacto2/: test.py
refacto2/src/: analizer.py  config.py  core.py  emulate.py  errors.py  example.py  hosta.py  inspector.py  prompt.json  prompt.py
scripts/: build_compat_matrix_python.sh  build_compat_matrix_types.sh
src/: .gitignore  OpenHosta.py  enhancer.ipynb  test.py  test2.py  test_william.py
src/DEPRECATED/: __init__.py
src/OpenHosta/: OpenHosta copy.py  OpenHosta.py  OpenHosta_pydantic.py  __init__.py  analizer.py  analytics.ipynb  analytics.py  build.py  builder.py  cache.py  checker.py  config.py  core.py  datapreparator.py  debug_return_type.ipynb  deco.ipynb  decoder.py  defaults.py  demo.ipynb  emulate.ipynb  emulate.py  emulate_pydantic.py  encoder.py  enhancer.py  errors.py  example.py  exec.py  hosta.py  inspector.py  model.py  pmac.ipynb  predict.py  prompt.json  prompt.py  requirements.txt  test.py  thought.py  trainset.py
src/OpenHosta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .coverage  .env.example  .env.exemple  Dockerfile  docker-compose.yml  enhancer.ipynb  oracle.ipynb  qtest_emulate_default.py  results.md  runner.py  test_emulate.py  test_exec.py  test_mandatory.py  test_ollama.py  test_report.html
tests/asynchrone/: test_batchdatacontext.py  test_gather_data.py
tests/doc/: test_markdown_python_blocks.py
tests/exec/: test_ask_stream.py  test_emulate_generator.py
tests/functionnal/: README.md  test_ask.py  test_audit_and_costs.py  test_callable.py  test_closure.py  test_direct_model.py  test_dotenv.py  test_emulate.py  test_func_ask_stream.py  test_func_emulate_generator.py  test_generate.py  test_inspection.py  test_mandatory.py  test_multimodal.py  test_retry.py  test_safe.py  test_test.py  test_type_alias.py
tests/functionnalTests/: README.md  test_ask.py  test_closure.py  test_emulate.py  test_mandatory.py
tests/guarded/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  example_literal.py  test_attempt_borderlines.py  test_callables.py  test_collections.py  test_consistency.py  test_corporate_email.py  test_dataclass.py  test_direct_parsing.py  test_enum.py  test_mro.py  test_proxy_types.py  test_resolver.py  test_scalars.py  test_typed_complex.py
tests/imagen/: test_gen_garden.py
tests/manual/: base_functions.py  datatypes.py  force_assistant_message.py  local.py  mirea.py  pydantic_functions.py  qwen3vl-instruct.py  reasoning_functions.py  reasoning_level.py  semantics.py  simple_flask.py  test_dotenv.py  test_generate.py  test_inspection.py  test_inspection_stream.py  test_semantic_manual.py  uncertainty.py  use_dotenv.py
tests/non-regression/: .env.exemple  .env.sh  base_functions.py  datatypes.py  generate_functions.py  predict_functions.py  public_function.py  (+3 more)
(+294 files in other folders)
