[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenHosta"
version = "1.1.0"
description = "Open-Source programming project IA integretion in developement environnement"
keywords = ["AI", "GPT", "Natural language", "Autommatic", "Easy"]
authors = [
  { name="Léandre Ramos"},
  { name="Merlin Devillard"},
  { name="William Jolivet"},
  { name="Emmanuel Batt"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: French",
    "Topic :: Software Development :: Code Generators"
]
dependencies = [
  "requests>=2.32.3",
  "pydantic>=2.8.2",
  "tiktoken>=0.7.0",
  "jsonschema>=4.23.0",
  "typing-extensions>=4.12.2"
]

[project.urls]
Homepage = "https://github.com/hand-e-fr/OpenHosta"
Issues = "https://github.com/hand-e-fr/OpenHosta/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"OpenHosta" = ["*.json"]

[tool.pytest.ini_options]
testpaths = [
    'tests/functionnalTests',
    'tests/unitTests',
    'tests/performanceTests'
]